# docstore

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE.md  app.py  azure-pipelines.yml  changelog.json  dev_requirements.in  dev_requirements.txt  docker-compose.yml  docstore.go  elasticsearch_helpers.py  go.mod  go.sum  implementation-notes.md  index_document.py  piptools.Dockerfile  pyproject.toml  reindex.py  requirements.in  requirements.txt  secrets.zip.enc  setup.py  test_date_helpers.py  test_requirements.in  test_requirements.txt  tests.Dockerfile  tox.ini  what-i-learnt.md
.github/: dependabot.yml  install-github-bin  main.workflow
.travis/: autorelease.py  build_secrets.py  releasetooling.py
docker/: app.Dockerfile  base.Dockerfile  install_github_dependency.sh  pip_tools.Dockerfile  tests.Dockerfile
docs/: RELEASE.md  docker-compose.md  previewing-the-files.md  storing-the-files.md  storing-the-metadata.md  uploading-with-curl.md  usage.md
migrations/: exceptions.py  from_2-0-0_to_2-1-0.py  from_2-1-0_to_2-2-0.py
personal/: build_linode_snapshot.py  bulk_upload_to_correspondence.py  docker-compose.yml  docstore_mv.py  rename_tag.py  save_book.sh  save_correspondence.sh  save_manual.sh
preview-generator/: Dockerfile  create_thumbnail.py
scripts/: clean_up_unreferenced_files.py  releasetooling.py  use_human_friendly_filenames.py
src/: .coveragerc  api.py  app.py  cli.py  config.py  css.py  date_helpers.py  elasticsearch_helpers.py  exceptions.py  file_manager.py  (+14 more)
(+119 files in other folders)
