[project]
name = "docstore"
version = "2.0.0"

[project.scripts]
docstore = "docstore.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
analytics = ["static/*", "templates/*"]

[tool.coverage.run]
branch = true
source = [
  "docstore",
  "tests",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 90
# fail_under = 100

# [tool.pytest.ini_options]
# filterwarnings = ["error"]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
