[project]
name = "docstore"
version = "2.0.0"

[project.scripts]
docstore = "docstore.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
analytics = ["static/*", "templates/*"]

[tool.coverage.run]
branch = true
source = [
  "docstore",
  "tests",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 90
# fail_under = 100

# [tool.pytest.ini_options]
# filterwarnings = ["error"]

[tool.mypy]
mypy_path = "src"
strict = true
